/*
  Localizable.strings
  Profile

  Created by  Stepanok Ivan on 23.09.2022.
  
*/

"TITLE" = "Profile";
"INFO" = "Profile info";
"ABOUT" = "About Me";
"EDIT_PROFILE" = "Edit Profile";
"YEAR_OF_BIRTH" = "Year of birth:";
"BIO" = "Bio:";
"SETTINGS" = "Settings";
"SETTINGS_VIDEO" = "Video settings";
"DATES_AND_CALENDAR" = "Dates & Calendar";
"SUPPORT_INFO" = "Support info";
...
