...
                                        )
                                        .overlay(
                                            Theme.Shapes.textInputShape
                                                .stroke(lineWidth: 1)
                                                .fill(Theme.Colors.textInputStroke)
                                        )
                                        .accessibilityIdentifier("username_textfield")
                                    
                                    Text(AuthLocalization.SignIn.password)
                                        .font(Theme.Fonts.labelLarge)
                                        .foregroundColor(Theme.Colors.textPrimary)
                                        .padding(.top, 18)
                                        .accessibilityIdentifier("password_text")
...
                                        )
                                        .overlay(
                                            Theme.Shapes.textInputShape
                                                .stroke(lineWidth: 1)
                                                .fill(Theme.Colors.textInputStroke)
                                        )
                                        .accessibilityIdentifier("password_textfield")
                                    HStack {
                                        if !viewModel.config.features.startupScreenEnabled {
                                            Button(CoreLocalization.SignIn.registerBtn) {
                                                viewModel.router.showRegisterScreen(
                                                    sourceScreen: viewModel.sourceScreen
                                                )
...
