...
  Authorization

  Created by Vladimir Chekyrta on 13.09.2022.
  
*/

"SIGN_IN.LOG_IN_TITLE" = "Sign in";
"SIGN_IN.WELCOME_BACK" = "Welcome back! Sign in to access your courses.";
"SIGN_IN.EMAIL" = "Email";
"SIGN_IN.EMAIL_OR_USERNAME" = "Email or username";
"SIGN_IN.PASSWORD" = "Password";
"SIGN_IN.FORGOT_PASS_BTN" = "Forgot password?";
"SIGN_IN.SELECTED_SITE" = "Selected Site";
...
